Convert from Website Project to Web Application Project - Change CodeFile to CodeBehind for proper compilation

--- a/onetap-solutions.master
+++ b/onetap-solutions.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="onetap-solutions.master.cs" Inherits="ashtalaxmi" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="onetap-solutions.master.cs" Inherits="ashtalaxmi" %>
 
 <%@ Register Src="~/includes/footer.ascx" TagPrefix="uc1" TagName="footer" %>
 <%@ Register Src="~/includes/header.ascx" TagPrefix="uc1" TagName="header" %>
